--- a/scss/cssclasses/_newspaper.scss
+++ b/scss/cssclasses/_newspaper.scss
@@ -70,7 +70,7 @@
     }
 }
 
-.newspaper div:has(> .frontmatter) + div ~ div > h1, /* TODO: replace with .mod-frontmatter on 1.7.3 release */
+.newspaper div:has(> .frontmatter) + div ~ div > h1, // TODO: replace with .mod-frontmatter on 1.7.3 release
 .newspaper .cm-content > .cm-line ~ .HyperMD-header-1 {
     border-top: 1px solid var(--text-normal);
 }
