--- a/scss/editor/_image.scss
+++ b/scss/editor/_image.scss
@@ -1,7 +1,7 @@
 @use '../foundations/colors/colors_definitions';
 
 body {
-    /* custom */
+    // custom
     --image-shadow-offset: var(--size-4-2);
     --image-shadow-stripe-thickness: 2px;
     --image-shadow-stripe-gap: 4px;
