--- a/scss/editor/_link.scss
+++ b/scss/editor/_link.scss
@@ -25,7 +25,7 @@ body {
     --link-external-decoration-hover: var(--link-external-decoration);
     --link-decoration-thickness: 2px;
 
-    /* custom */
+    // custom
     --link-decoration-thickness-hover: 1px;
 }
 
