--- a/scss/editor/_table.scss
+++ b/scss/editor/_table.scss
@@ -5,7 +5,7 @@ body {
     --table-column-first-border-width: 0;
     --table-column-last-border-width: 0;
 
-    /* custom */
+    // custom
     --table-header-line-height: 1.8;
 }
 
