--- a/scss/cssclasses/_note-accent.scss
+++ b/scss/cssclasses/_note-accent.scss
@@ -81,25 +81,25 @@ body.theme-dark {
     --accent-l: var(--note-accent-6-l);
 }
 
-/* Recomputation at the note level */
+// Recomputation at the note level
 .markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6),
 .markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
-    /* Recompute the --color-accent variables */
+    // Recompute the --color-accent variables
     --color-accent-hsl: var(--accent-h), var(--accent-s), var(--accent-l);
     --color-accent: hsl(var(--accent-h), var(--accent-s), var(--accent-l));
     --color-accent-1: hsl(calc(var(--accent-h) - 3), calc(var(--accent-s) * 1.02), calc(var(--accent-l) * 1.15));
     --color-accent-2: hsl(calc(var(--accent-h) - 5), calc(var(--accent-s) * 1.05), calc(var(--accent-l) * 1.29));
 
-    /* Recompute all variables directly depending on --color-accent variables */
+    // Recompute all variables directly depending on --color-accent variables
     --interactive-accent-hsl: var(--color-accent-hsl);
     --interactive-accent: var(--color-accent);
     --interactive-accent-hover: var(--color-accent-1);
     --text-accent: var(--color-accent-1);
     --text-accent-hover: var(--color-accent-2);
 
-    /* Recompute everything else */
+    // Recompute everything else
 
-    /* Links */
+    // Links
     --link-color: var(--text-accent);
     --link-color-hover: var(--text-accent-hover);
     --link-external-color: var(--text-accent);
@@ -107,22 +107,22 @@ body.theme-dark {
     --link-unresolved-color: var(--text-accent);
     --link-unresolved-decoration-color: hsla(var(--interactive-accent-hsl), 0.3);
 
-    /* List */
+    // List
     --list-marker-color-collapsed: var(--text-accent);
 
-    /* Blockquotes */
+    // Blockquotes
     --blockquote-border-color: var(--interactive-accent);
 
-    /* Checkboxes */
+    // Checkboxes
     --checkbox-color: var(--interactive-accent);
     --checkbox-color-hover: var(--interactive-accent-hover);
 
-    /* Tables */
+    // Tables
     --table-selection: hsla(var(--color-accent-hsl), 0.1);
     --table-selection-border-color: var(--interactive-accent);
     --table-drag-handle-color-active: var(--text-on-accent);
 
-    /* Tags */
+    // Tags
     --tag-color: var(--text-accent);
     --tag-color-hover: var(--text-accent);
     --tag-background: hsla(var(--interactive-accent-hsl), 0.1);
@@ -130,7 +130,7 @@ body.theme-dark {
     --tag-border-color: hsla(var(--interactive-accent-hsl), 0.15);
     --tag-border-color-hover: hsla(var(--interactive-accent-hsl), 0.15);
 
-    /* Other */
+    // Other
     --text-selection: hsla(var(--interactive-accent-hsl), 0.25);
     --icon-color-active: var(--text-accent);
     --collapse-icon-color-collapsed: var(--text-accent);
