--- a/scss/editor/callouts/_callout-clue.scss
+++ b/scss/editor/callouts/_callout-clue.scss
@@ -1,30 +1,30 @@
-/* Tape variants */
+// Tape variants
 .callout[data-callout="clue"][data-callout-metadata~="tape-a"] { --clue-tape-variant: var(--clue-tape-a); }
 .callout[data-callout="clue"][data-callout-metadata~="tape-b"] { --clue-tape-variant: var(--clue-tape-b); }
 .callout[data-callout="clue"][data-callout-metadata~="tape-c"] { --clue-tape-variant: var(--clue-tape-c); }
 .callout[data-callout="clue"][data-callout-metadata~="tape-d"] { --clue-tape-variant: var(--clue-tape-d); }
 
-/* Paper variants */
+// Paper variants
 .callout[data-callout="clue"][data-callout-metadata~="paper-a"] { --clue-paper-variant: var(--clue-paper-a); }
 .callout[data-callout="clue"][data-callout-metadata~="paper-b"] { --clue-paper-variant: var(--clue-paper-b); }
 .callout[data-callout="clue"][data-callout-metadata~="paper-c"] { --clue-paper-variant: var(--clue-paper-c); }
 .callout[data-callout="clue"][data-callout-metadata~="paper-d"] { --clue-paper-variant: var(--clue-paper-d); }
 
-/* Ripped mask variants */
+// Ripped mask variants
 .callout[data-callout="clue"][data-callout-metadata~="ripped-a"] { --clue-ripped-variant: var(--clue-ripped-a); }
 .callout[data-callout="clue"][data-callout-metadata~="ripped-b"] { --clue-ripped-variant: var(--clue-ripped-b); }
 .callout[data-callout="clue"][data-callout-metadata~="ripped-c"] { --clue-ripped-variant: var(--clue-ripped-c); }
 .callout[data-callout="clue"][data-callout-metadata~="ripped-d"] { --clue-ripped-variant: var(--clue-ripped-d); }
 
 .callout[data-callout="clue"] {
-    --callout-color: 0, 0, 0; /* Border and text color */
+    --callout-color: 0, 0, 0; // Border and text color
     --callout-border-width: 0px;
     --callout-header-height: 50px;
     --callout-icon: lucide-search;
     --callout-title-padding: 0;
-    --clue-tape-variant: var(--clue-tape-a); /* default */
-    --clue-paper-variant: var(--clue-paper-a); /* default */
-    --clue-ripped-variant: var(--clue-ripped-a); /* default */
+    --clue-tape-variant: var(--clue-tape-a); // default
+    --clue-paper-variant: var(--clue-paper-a); // default
+    --clue-ripped-variant: var(--clue-ripped-a); // default
 
     background: none;
     border: none;
@@ -78,9 +78,6 @@
     }
     > .callout-title:hover .callout-icon { opacity: 1; }
     &:hover .callout-title-inner { font-weight: var(--font-bold); }
-
-    /* Other theme compatibility */
-    > .callout-title-inner { flex-grow: unset; }
 }
 
 .callout[data-callout="clue"][data-callout-metadata*="ripped"] {
