--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -5,7 +5,7 @@
 @use 'callout-clue';
 @use 'callout-comic';
 @use 'callout-conversation';
-/*@use 'callout-cutout';*/
+// @use 'callout-cutout';
 @use 'callout-email';
 @use 'callout-film-strip';
 @use 'callout-grid';
