--- a/scss/editor/lists/_tasks.scss
+++ b/scss/editor/lists/_tasks.scss
@@ -58,7 +58,7 @@ $supported-normal-boxes: (
     '/' 'icon-incomplete' 'interactive-accent' 'interactive-accent-hover'
 );
 
-/* Custom icons */
+// Custom icons
 $sel: ":is(";
 @each $label, $icon, $color in $supported-icon-labels {
     @if ($sel != ":is(") { $sel: $sel + ", "; }
@@ -90,7 +90,7 @@ $sel: $sel + ")";
     }
 }
 
-/* Standard boxes (non doodle) */
+// Standard boxes (non doodle)
 @each $label, $icon, $color, $color-hover in $supported-normal-boxes {
     :is(.HyperMD-task-line, .task-list-item)[data-task='#{$label}'] {
         --checkbox-color: var(--#{$color});
@@ -103,9 +103,9 @@ $sel: $sel + ")";
     }
 }
 
-/* Doodle icons */
+// Doodle icons
 @scope (.fas-doodle-icons:not(.fas-accessibility)) to (:is(.callout[data-callout="autopsy"], .callout[data-callout="screen"], .callout[data-callout="email"])) {
-    /* Default checkbox for doodle icons */
+    // Default checkbox for doodle icons
     :is(.HyperMD-task-line, .task-list-item) input[type=checkbox] {
         &, &:hover {
             background: none;
@@ -125,7 +125,7 @@ $sel: $sel + ")";
         }
     }
 
-    /* Standard boxes with doodle effect */
+    // Standard boxes with doodle effect
     @each $label, $icon, $color, $color-hover in $supported-doodle-boxes {
         @for $i from 1 through 6 {
             :is(.HyperMD-task-line, .task-list-item)[data-task='#{$label}']:nth-child(6n + #{$i}) {
