--- a/scss/foundations/_typography.scss
+++ b/scss/foundations/_typography.scss
@@ -1,4 +1,4 @@
-/* ----------- FONT ----------- */
+// ----------- FONT -----------
 
 .markdown-source-view,
 .markdown-source-view.mod-cm6 .cm-scroller,
@@ -13,7 +13,7 @@
 }
 
 
-/* ----------- TEXT CONTENT ----------- */
+// ----------- TEXT CONTENT -----------
 
 p, li {
     text-wrap: pretty;
