--- a/scss/shared/_shadow-color.scss
+++ b/scss/shared/_shadow-color.scss
@@ -1,9 +1,9 @@
 .theme-light {
-    /* shadows */
+    // shadows
     --shadow-color: rgba(0, 0, 0, 0.2);
 }
 
 .theme-dark {
-    /* shadows */
+    // shadows
     --shadow-color: rgba(0, 0, 0, 0.3);
 }
